--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,38 @@
 path {
-    pointer-events: all;
+  pointer-events: all;
 }
 path:hover {
-    opacity: 0.50;
-    cursor: pointer;
+  opacity: 0.5;
+  cursor: pointer;
 }
 
-.center-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    flex-direction: column;
-    padding: 1.5rem;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+  padding: 1.5rem;
 }
 
-h2 {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-    margin-bottom: 0px;
+.title {
+  font-size: 2.25rem;
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 600px) {
+  .title {
+    font-size: 1.875rem;
+  }
+}
+
+p {
+  margin: 0.2rem;
+}
+
+.tooltip {
+  opacity: 1 !important;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  letter-spacing: 0.025em;
 }
