--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400&display=swap');
-
-body,
-html {
-  margin: 0;
-  padding: 0;
+path {
+    pointer-events: all;
 }
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
+path:hover {
+    opacity: 0.50;
+    cursor: pointer;
 }
