--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ path:hover {
 
 .title {
   font-size: 2.25rem;
-  margin-bottom: 0;
+  margin-bottom: -1rem;
 }
 
 @media screen and (max-width: 600px) {
